# CryptaLearn

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  run_privacy_experiments.sh
CryptaLearn/: CryptaLearn.opam  dune-project
CryptaLearn/docs/: ARCHITECTURE.md  COMMANDS.md  DOCUMENTATION.md  EXPERIMENTAL_METRICS.md  architecture.md  commands.md  experimental_metrics.md  test_results.md
CryptaLearn/docs/experiment_results/: epsilon_0.05.txt  epsilon_0.1.txt  epsilon_0.5.txt  epsilon_1.0.txt  keysize_1024.txt  keysize_2048.txt
CryptaLearn/lib/: cryptalearn.ml  dune
CryptaLearn/lib/dp/: dp.ml  dp.mli  dune
CryptaLearn/lib/fl/: dune  fl.ml  fl.mli
CryptaLearn/lib/he/: dune  he.ml  he.mli
CryptaLearn/test/: dune  test_CryptaLearn.ml
docs_temp/: test_results.md
