(lang dune 3.17)

(name CryptaLearn)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name CryptaLearn)
 (synopsis "A privacy-preserving machine learning library")
 (description "A privacy-preserving machine learning library implementing federated learning, homomorphic encryption, and differential privacy")
 (depends ocaml dune core zarith unix (odoc :with-doc))
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
