(lang dune 3.17)

(name CryptaLearn)

(generate_opam_files true)

(source
 (github chizy7/CryptaLearn))

(authors "Chizaram Chibueze <chizy7@outlook.com>")

(maintainers "Chizaram Chibueze <chizy7@outlook.com>")

(license MIT)

(documentation https://github.com/chizy7/CryptaLearn/blob/main/DOCUMENTATION.md)

(package
 (name CryptaLearn)
 (synopsis "A privacy-preserving machine learning library")
 (description "A privacy-preserving machine learning library implementing federated learning, homomorphic encryption, and differential privacy")
 (depends ocaml dune core zarith unix (odoc :with-doc))
 (tags
  ("privacy" "machine-learning" "federated-learning" "homomorphic-encryption" "differential-privacy")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
